--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 }
 body{
     overflow: hidden;
+    background-image: url('https://t4.ftcdn.net/jpg/05/50/95/87/360_F_550958748_OeGcRonEUNoVhd0wjd9zSEMhLFIGO9Bt.jpg');
+    background-repeat: no-repeat;
+    background-size:cover ;
 }
 .container{
     position: absolute;
@@ -20,8 +23,8 @@ body{
     text-align: center;
     box-shadow: 1px px 25px red;
     z-index: 2;
-
-
+  background-color: transparent;
+    backdrop-filter: blur(6px);
 }
 .head h2{
     font-size: 4vmin;
@@ -29,7 +32,8 @@ body{
     
 } 
 .main-body{
-    background-color: aquamarine;
+    background-color: transparent;
+    backdrop-filter: blur(6px);
     width: 100%;
     height: 80%;
     display: flex;
@@ -40,46 +44,44 @@ body{
  .main-body::-webkit-scrollbar{
     display: none;
 }
-.model{
-   border: 1px solid white;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+#model{
+    outline: none;
     padding: 2vmin;
-    box-shadow:  1px 1px  20px blue;
+   box-shadow:  1px 1px  20px blue; 
+    resize: none; 
+    border: none;
+    color: rgb(74, 189, 12);    
+    background-color: transparent;
+    backdrop-filter: blur(6px);
+    height: 100%;
+    font-size: 24px;
+    font-family:sans-serif;
+    font-weight: bold;
+    -webkit-text-stroke: 0.9px black; 
+    /* text-fill-color: rgb(74, 189, 12); */
+}
 
-   width: fit-content;
-    text-align: start;
-    margin: 2vmin;
-   
-}
-.role{
-   text-align: end;
-   border: 1px solid white;
-   border-top-right-radius: 20px;
-   border-bottom-left-radius: 20px;
-   box-shadow:  1px 1px  20px blue;
-    
-    margin: 2vmin;
-    padding: 2vmin;
-    align-items: end;
-   
-}
 .tail{
     padding: 2vmin;
     display: flex;
     align-items: center;
+    background-color: transparent;
+    backdrop-filter: blur(6px);
     justify-content: space-evenly;
 }
 .text-field{
     height: 40px;
-    width: 40%;
+    width: 60%;
     text-align: center;
     border-radius: 20px;
     outline: none;
-    border: none;
+    background-color: transparent;
+    backdrop-filter: blur(6px);
     font-family: sans-serif;
     font-weight: bold;
     font-size: 18px;
+    color: white;
+    
     
 }
 .text-field:hover{
@@ -89,7 +91,9 @@ body{
 .submit{
     height:40px ;
     width: 70px;
-    
+    background-color: transparent;
+    backdrop-filter: blur(6px);
+  
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
     font-size: 20px;
@@ -98,7 +102,7 @@ body{
 
 }
 .submit:hover{
-    background: rgba(255, 0, 0, 0.532);
+    
     box-shadow:  4px 4px  20px blue;
-    transition: 0.7s;
+    transition: 0.5s;
 }
